--- a/system/app/static/css/main.css
+++ b/system/app/static/css/main.css
@@ -28,6 +28,12 @@
     color: black;
 }
 
+body{
+    background-image: url("../images/logo2.jpg");
+    background-size: cover;
+    overflow: hidden;
+}
+
 .card:hover {
     box-shadow: 0 10px 18px 0 rgba(19, 19, 19, 0.61);
     transform: scale(1.02);
