--- a/system/app/templates/result.html
+++ b/system/app/templates/result.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     
     <head>
+        <meta charset="UTF-8">
         <title>Brain Tumor</title>
-        <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="../static/layui/css/layui.css"/>
         <link rel="stylesheet" href="../static/css/main.css"/>
+        <link rel="shortcut icon" href="../static/images/logo1.png" type="image/x-icon" />
     </head>
     
-    <header>
-            <nav>
-              <div class="nav-bg"></div>
-              <ul>
-                <li><a href="/"><img src="../static/images/brain_logo.png" height=40px width=40px alt="neuralBlack"/> <p>BRH35 </p></a></li>
-              </ul>
-            </nav>
-    </header>
-    
-    <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-    </label>
-    
     <body>
-      <div class="cardpred">
+        <nav class="layui-bg-green">
+            <div class="nav-bg layui-bg-green"></div>
+            <ul>
+                <li>
+
+                    <a href="javascript:;">
+                         &nbsp; &nbsp;
+                        <img src="../static/images/logo.png" height=40px width=40px alt="neuralBlack"/>
+                        <p>Brain Tumor Classification System</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+
+        <div class="cardpred">
           <div class="container">
             <img src="{{ image_file }}" alt="Uploaded Image" height="35%" width="35%">
             <p>Prediction: {{ result }}</p>
             <button type="button" id="goHome"><a href="/" style="text-decoration: none; color: white;">Go home</a></button>
           </div>
-      </div>
-  </body>
+        </div>
+    </body>
   
 </html>
