--- a/system/app/templates/index.html
+++ b/system/app/templates/index.html
@@ -38,7 +38,7 @@
                             <option value = "MobileNetV2">MobileNet-V2</option>
                             <option value = "DenseNet121">DenseNet-121</option>
                             <option value = "SqueezeNet">SqueezeNet</option>
-                            <option value = "AlexNet">AlexNet</option>
+                            <option value = "AlexNet">Alex-Net</option>
                             <option value = "test">test</option>
                         </select>
                         <br>
