--- a/system/app/templates/result.html
+++ b/system/app/templates/result.html
@@ -22,8 +22,11 @@
         </nav>
         <div class="cardpred">
             <div class="container">
-                <img src="{{ image_file }}" alt="Uploaded Image" height="35%" width="35%">
-                <p>Prediction: {{ result }}</p>
+                <br>
+                &nbsp;&nbsp;
+                <img src="{{ image_file }}" alt="Uploaded Image" height="150px" width="150px">
+                <p class="layui-font-20">Prediction: {{ result }}</p>
+                <br>
                 <button type="button" id="goHome"><a href="/" style="text-decoration: none; color: white;">Go home</a></button>
             </div>
         </div>
