--- a/system/app/templates/index.html
+++ b/system/app/templates/index.html
@@ -29,17 +29,24 @@
                         <br>
                         <label>&nbsp; &nbsp;Select the Model : </label>
                         <select name ="model_choice" required>
+                            <option value = "proposed">MDFE-Net</option>
                             <option value = "VGG16">VGG-16</option>
                             <option value = "ResNet50">ResNet-50</option>
                             <option value = "Xception">Xception</option>
-                            <option value = "ARMNet">ARM-Net</option>
                             <option value = "InceptionV3">Inception-V3</option>
-                            <option value = "MFLNet">MFL-Net</option>
                             <option value = "MobileNetV2">MobileNet-V2</option>
-                            <option value = "DenseNet121">DenseNet-121</option>
-                            <option value = "SqueezeNet">SqueezeNet</option>
                             <option value = "AlexNet">Alex-Net</option>
-                            <option value = "test">test</option>
+                            <option value = "SqueezeNet">SqueezeNet</option>
+                            <option value = "EfficientNetB0">EfficientNet-B0</option>
+                            <option value = "MFLNet">MFL-Net</option>
+                            <option value = "ARMNet">ARM-Net</option>
+                            <option value = "DenseNet121">VGG19-TLFT</option>
+                            <option value = "NeuralNet19">NeuralNet19</option>
+                            <option value = "DNNwithSVM">DNN+SVM</option>
+                            <option value = "CDA-Net">CDANet</option>
+                            <option value = "CapsNet">CapsNet</option>
+                            <option value = "WeightedEM">WE-Model</option>
+                            
                         </select>
                         <br>
                         <br>
