--- a/system/app/templates/result.html
+++ b/system/app/templates/result.html
@@ -24,8 +24,8 @@
             <div class="container">
                 <br>
                 &nbsp;&nbsp;
-                <img src="{{ image_file }}" alt="Uploaded Image" height="150px" width="150px">
-                <p class="layui-font-20">Prediction: {{ result }}</p>
+                <img src="{{ image_file }}" alt="Uploaded Image" height="170px" width="480px">
+                <p >Prediction: {{ result }}</p>
                 <br>
                 <button type="button" id="goHome"><a href="/" style="text-decoration: none; color: white;">Go home</a></button>
             </div>
